--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,8 @@
     <title>Tổng công ty SAMCO</title>
     <link rel="shortcut icon" href="%PUBLIC_URL%/media/logos/logo.png" />
     <link rel="stylesheet" id="layout-styles-anchor" href="%PUBLIC_URL%/splash-screen.css" />
-    <!-- <link rel="stylesheet" href="//code.jquery.com/ui/1.8.10/themes/smoothness/jquery-ui.css" type="text/css">
-    <script type="text/javascript" src="//ajax.aspnetcdn.com/ajax/jquery.ui/1.8.10/jquery-ui.min.js"></script> -->
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.8.10/themes/smoothness/jquery-ui.css" type="text/css">
+    <script type="text/javascript" src="//ajax.aspnetcdn.com/ajax/jquery.ui/1.8.10/jquery-ui.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
   </head>
 
